--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,7 @@
 */.DS_Store
 
 node_modules
-
-lodash.mergewith
-lodash.template
-stringstream
-braces
-clean-css
-fstream
-tar
-extend
-minimatch
-randomatic
-cryptiles
-sshpk
-lodash
-tough-cookie
-hoek
+package-lock.json
 
 _site
 
